should not be longer than the lines of dashes.

Miguel Bolanos.

Contributor			Email
---------------------------------------------------------------------------

Claudio Matsuoka		claudio@conectiva.com
Eduardo Habkost			ehabkost@conectiva.com.br
Miguel Bolanos			mike@linuxlabs.com
Tommy McCabe			rocketjet314@yahoo.com

---------------------------------------------------------------------------

Sat Aug 19 17:44:45 UTC 2006	Claudio Matsuoka <claudio@mandriva.com>
	* Set heap top to 35000 when linking compress
	* Cleanup: using macros instead of magic numbers in init.c
	* Cleanup: removed unused qsort.c in sys_utils/

Sat Aug 19 12:02:08 UTC 2006	Claudio Matsuoka <claudio@mandriva.com>
	* Addressed ash compiler warnings when building with HOSTCC,
	  mostly by including proper headers

Sat Sep 18 13:29:26 BRT 2004	Claudio Matsuoka <claudio@conectiva.com>

	* Don't use SHORTNAMES in bc (breaks compilation of parser files)
	* Set Makefile to use yacc because bison usually installs
	  /usr/bin/yacc as well
	* Clean up generated files (bc.c, sbc.c, scan.c, y.tab.h) in the
	  clean rule (also removed those files from CVS).
	  
Sat Sep 18 09:08:23 CST 2004	Miguel Bolanos <mike@linuxlabs.com>

	* Fixed warning caused by some "," on bc.y and sbc.y
	* Fixed a broken expresion on bc.y
	* Fixed bc's Makefile to use bison rather than yacc, also fixed the
	  flags from $(LEX), as flex will no accept -I8.

Fri Sep 17 18:48:26 BRT 2004	Claudio Matsuoka <claudio@conectiva.com>

	* Added a port of Nathan Laredo's tinyirc IRC client.

Wed Jul 28 12:09:11 CST 2004	Tommy McCabe <rocketjet314@yahoo.com>

	* Added l to PRGS on file_utils

Tue Jul 27 22:22:32 CST 2004	Miguel Bolanos <mike@linuxlabs.com>

	* Merged Claudio's patch to:
		- build full3, full5, comb, comb_net and boot.

Tue Jul 27 07:48:56 CST 2004	Miguel Bolanos <mike@linuxlabs.com>

	* Removed sudo commands from the Makefile, fixed the broken "clean"
	  (all merged from Tommy's patch)
